# LambdaPipe

./: .gitignore  LastResults.json  README.md  admet_analyzer.py  admet_request.py  analise_final.docx  json_handler.py  lambdapipe.py  main.py  mini_admet.py  pharmit_control.py  phore_handle.py  phore_handle_testing.txt  pyproject.toml  result_analyzer.py  sdf_processor.py  smiles_list.txt  teste.py  utils.py
files/: 7KR1-pocket3-remdesivir-cid76325302.pdbqt  7KR1.pdbqt  file_1.json  pharmit.json
fpadmet/: runadmet.sh
fpadmet/RESULTS/: fps.txt
lambdapipe/: PharmaSphere.py  admet_analyzer.py  admet_request.py  exceptions.py  fetch_plip.py  gera_results.py  get_html.py  json_handler.py  lambdapipe.py  pharma_optimizer.py  pharma_sphere.py  pharmit_control.py  plip_process.py  sdf_processor.py  top_feature_configs.py  utils.py
pharmisa/: admet_analyzer.py  admet_request.py  exceptions.py  fpadmet.py  get_html.py  json_handler.py  pharma_optimizer.py  pharmisa.py  pharmit_control.py  pharmit_control_firefox.py  sdf_processor.py  top_feature_configs.py  utils.py
pharmisa/fpadmet/: runadmet.sh
pharmisa/fpadmet/PREDICTORS/: predict_carcinogenecity.R  predict_respiratorytox.R
pharmisa/fpadmet/RESULTS/: fps.txt  predicted10.txt  predicted11.txt  predicted17.txt  predicted25.txt  predicted29.txt  predicted35.txt  predicted4.txt  predicted40.txt  predicted56.txt  predicted6.txt  predicted7.txt  predicted8.txt
src/: admet_analyzer.py  admet_request.py  json_handler.py  pharmit_control.py  sdf_processor.py  utils.py
